--- a/blog/test/fixtures/shifts.yml
+++ b/blog/test/fixtures/shifts.yml
@@ -1,15 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  id: 1
-  user_id: 1
-  start: 2022-06-24 12:32:51
-  finish: 2022-06-24 12:32:51
-  break_length: 2022-06-24 12:32:51
+  start: 2022-06-27 16:06:04
+  finish: 2022-06-27 16:06:04
+  break_length: 1
+  user: one
 
 two:
-  id: 1
-  user_id: 1
-  start: 2022-06-24 12:32:51
-  finish: 2022-06-24 12:32:51
-  break_length: 2022-06-24 12:32:51
+  start: 2022-06-27 16:06:04
+  finish: 2022-06-27 16:06:04
+  break_length: 1
+  user: two
